deploy-canary/model-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api-blue
  labels:
    app: yolo-blue
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: yolo-blue
  template:
    metadata:
      labels:
        app: yolo-blue
    spec:
      containers:
      - name: yolo-v3
        image: ghcr.io/mporada259449/yolo/yolo-v3:1.2 
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: '1'
            memory: '256Mi'
