deploy-canary/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service-blue
spec:
  selector:
    app: yolo-blue
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
