deploy-canary/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service-green
spec:
  selector:
    app: yolo-green
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
